<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EEF1"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="212dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_shape"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:layout_marginTop="12dp"
            android:paddingBottom="16dp"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="168dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/currency_converter_text_logo_2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                >
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:minWidth="120dp"
                    android:id="@+id/currency_from_spinner"
                    android:padding="8dp"
                    android:background="@drawable/spinner_style"
                    android:layout_marginRight="16dp"

                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/exchange_button"
                    android:layout_marginRight="16dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_exchange"
                    android:background="@drawable/exchange_button_style"

                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:minWidth="120dp"
                    android:id="@+id/currency_to_spinner"
                    android:padding="8dp"
                    android:background="@drawable/spinner_style"
                    />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/white"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textColor="@color/grey" />

                    <TextView
                        android:id="@+id/currency_from_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="  - "
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/convert_from_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/text_background"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="18sp"

                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/grey_100" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/to"
                        android:textColor="@color/grey" />

                    <TextView
                        android:id="@+id/currency_to_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="  - "
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/convert_to_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/text_background"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="18sp"

                        />

                    <TextView
                        android:id="@+id/unit_amount_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/grey"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/updated_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/grey"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/grey_100" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/amount_title"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/amount_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/et_background"
                        android:hint="@string/amount_field_hint"
                        android:inputType="numberDecimal"
                        android:paddingLeft="10dp"
                        android:paddingTop="8dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                >
                <ProgressBar
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/progress_bar"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:elevation="16dp"

                    />

                <Button
                    android:id="@+id/convert_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_state"
                    android:enabled="false"
                    android:text="@string/convert_text"
                    android:textColor="@color/white" />


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>